@@ -404,6 +404,9 @@ through the tree).
 Specify the version which the upstream release must match in order to be
 considered, rather than using the release with the highest version.
 .TP
+\fB\-\-download\-current\-version\fR
+Download the currently packaged version
+.TP
 .B \-\-verbose
 Give verbose output.
 .TP
